Fix webfont visible

--- a/src/icons.scss
+++ b/src/icons.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'rc-datepicker';
-  src: url('./fonts/datepicker.ttf') format('truetype');
+  src: local('Arial'), url('./fonts/datepicker.ttf') format('truetype');
+  font-display: swap;
   font-weight: 400;
   font-style: normal;
 }
